fixed aspect ratio on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ code {
   }
 }
 
-@media screen and (min-width: 640px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .aspect-ratio {
     aspect-ratio: 5/3;
   }
